pipeline/k8s/deployment copy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contributions-tracker
  namespace: contributions-tracker
  labels:
    app: contributions-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contributions-tracker
  template:
    metadata:
      labels:
        app: contributions-tracker
    spec:
      serviceAccountName: contributions-tracker-sa
      containers:
        - name: contributions-tracker
          image: !GetAtt ECRRepository.RepositoryUri:latest
          ports:
            - containerPort: 8000
